// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`form-control-monetary Renders with all props provided 1`] = `
<form-control-monetary exportparts="label,input,input-group-input,input-group-text,input-invalid">
  <div class="d-flex flex-column form-group">
    <label class="form-label" htmlfor="amount" part="label">
      Amount
    </label>
    <div class="input-group">
      <span class="input-group-text" part="input-group-text">
        $
      </span>
      <input class="form-control is-invalid monetary" id="amount" name="amount" part="input input-group-input input-invalid" type="text" value="1,500">
    </div>
    <small class="form-text text-muted" id="form-help-text-amount" part="input-help-text">
      Enter payment amount
    </small>
    <small class="form-text text-danger" id="form-error-text-amount" part="input-error-text">
      Invalid amount
    </small>
  </div>
</form-control-monetary>
`;

exports[`form-control-monetary renders correctly with default props 1`] = `
<form-control-monetary exportparts="label,input,input-group-input,input-group-text,input-invalid">
  <div class="d-flex flex-column form-group">
    <label class="form-label" htmlfor="amount" part="label">
      Amount
    </label>
    <div class="input-group">
      <span class="input-group-text" part="input-group-text">
        $
      </span>
      <input class="form-control monetary" id="amount" name="amount" part="input input-group-input" type="text">
    </div>
  </div>
</form-control-monetary>
`;
